--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "framer-motion": "^11.0.22",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.3",
-    "next": "^14.1.4",
+    "next": "^14.2.0",
     "next-themes": "^0.3.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
